// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Table /> should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  max-width: 100%;
}

<div
  class="c0"
/>
`;

exports[`component <Table disabled={true} /> should render correctly  1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  height: 100%;
  max-width: 100%;
  pointer-events: none;
  opacity: 0.4;
}

<div
  class="c0"
  disabled=""
/>
`;
